# whatsapp-oficial-learning

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  settings.py  test.py
docs/: WhatsApp Cloud API.postman_collection.json  example.md  meta_developer_account_config_guide.md  pywa.md  rules.md
src/: __init__.py  server.py
src/api/: __init__.py  api.py
src/api/dependencies/: __init__.py  wa.py
src/api/routes/: __init__.py  message.py
src/core/: __init__.py  base.py  settings.py  wa_client.py
src/schemas/: __init__.py  messages.py
src/services/: __init__.py  media_message.py  reaction_message.py  template_message.py  text_message.py
